--- a/PageTheScroll/Base.lproj/Main.storyboard
+++ b/PageTheScroll/Base.lproj/Main.storyboard
@@ -1,26 +1,78 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PageTheScroll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="ayt-XE-DMM">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="uG5-CS-r3S">
+                                <rect key="frame" x="278" y="36" width="102" height="94"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="94" id="aCn-jt-PjF"/>
+                                    <constraint firstAttribute="width" constant="102" id="bhO-2F-b6T"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="7fM-if-FSN">
+                                <rect key="frame" x="0.0" y="558" width="414" height="178"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="178" id="iR1-NS-tWw"/>
+                                </constraints>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I9Q-Uf-4J6">
+                                <rect key="frame" x="97" y="0.0" width="220" height="736"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="x7g-U8-wsg"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="uG5-CS-r3S" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="5Ub-de-OqZ"/>
+                            <constraint firstItem="ayt-XE-DMM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="BAV-sC-20x"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7fM-if-FSN" secondAttribute="bottom" id="Fn0-qF-731"/>
+                            <constraint firstItem="7fM-if-FSN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Lu3-FC-e7c"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ayt-XE-DMM" secondAttribute="bottom" id="PTL-zs-iLE"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="I9Q-Uf-4J6" secondAttribute="bottom" id="QAc-Mn-9oo"/>
+                            <constraint firstAttribute="trailing" secondItem="ayt-XE-DMM" secondAttribute="trailing" id="WzH-BP-teW"/>
+                            <constraint firstItem="I9Q-Uf-4J6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Yil-i4-R6h"/>
+                            <constraint firstItem="I9Q-Uf-4J6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ecE-57-pwY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uG5-CS-r3S" secondAttribute="trailing" constant="14" id="hQa-5B-xiI"/>
+                            <constraint firstItem="ayt-XE-DMM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="jY2-4Q-5VP"/>
+                            <constraint firstAttribute="trailing" secondItem="7fM-if-FSN" secondAttribute="trailing" id="smP-Jt-h5j"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="I9Q-Uf-4J6" id="Hge-j7-GBC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Mountains" width="375" height="100"/>
+        <image name="Sky" width="375" height="667"/>
+        <image name="Sun" width="53" height="53"/>
+    </resources>
 </document>
